--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Первая страница -->
+    <!-- Первый экран -->
     <div class="page page-1 active">
         <p class="subtitle">ПРИГЛАШЕНИЕ НА СВАДЬБУ</p>
         <h1 class="names">АРТЕМ <span>и</span> АННА</h1>
@@ -17,22 +17,38 @@
         </div>
     </div>
 
-    <!-- Вторая страница -->
-    <div class="page page-2">
-        <h2 class="heading">ДОРОГИЕ ГОСТИ!</h2>
-        <p class="text">
-            Приглашаем вас отпраздновать важное событие<br>
-            в нашей жизни – день свадьбы!
-        </p>
-        <h3 class="date">1 ИЮНЯ 2025</h3>
-        <p class="text">Мы будем рады видеть вас<br> в кругу наших гостей!</p>
-        <p class="signature">Артем и Анна</p>
+    <!-- Основной контент (вторая и третья секции) -->
+    <div class="main-content">
+        <!-- Вторая секция -->
+        <section class="section invite-details">
+            <h2 class="heading">ДОРОГИЕ ГОСТИ!</h2>
+            <p class="text">
+                Приглашаем вас отпраздновать важное событие<br>
+                в нашей жизни – день свадьбы!
+            </p>
+            <h3 class="date">1 ИЮНЯ 2025</h3>
+            <p class="text">Мы будем рады видеть вас<br> в кругу наших гостей!</p>
+            <p class="signature">Артем и Анна</p>
+        </section>
+
+        <!-- Третья секция -->
+        <section class="section location-info">
+            <h4 class="place-title">Место проведения</h4>
+            <h2 class="place-name">Резиденция Маслово</h2>
+            <img src="images/location.jpg" alt="Резиденция" class="location-img">
+            <p class="place-address">
+                Московская область, Одинцовский ГО,<br> территориальное управление Успенское
+            </p>
+            <a href="#" class="map-button">ПЕРЕЙТИ НА КАРТУ</a>
+            <p class="codeword">Кодовое слово для въезда</p>
+            <p class="password">АС</p>
+        </section>
     </div>
 
     <script>
         function openInvite() {
             document.querySelector('.page-1').classList.remove('active');
-            document.querySelector('.page-2').classList.add('active');
+            document.querySelector('.main-content').scrollIntoView({ behavior: 'smooth' });
         }
     </script>
 </body>
