--- a/index.html
+++ b/index.html
@@ -43,6 +43,34 @@
             <p class="codeword">Кодовое слово для въезда</p>
             <p class="password">АС</p>
         </section>
+        <!-- Четвёртая секция — Тайминг -->
+<section class="section timing">
+    <h2 class="timing-title">ТАЙМИНГ</h2>
+    <div class="timing-container">
+        <div class="timing-item">
+            <div class="time">14:30</div>
+            <div class="event">Сбор гостей</div>
+        </div>
+        <div class="timing-line"></div>
+        <div class="timing-item">
+            <div class="time">16:00</div>
+            <div class="event">Церемония</div>
+        </div>
+        <div class="timing-line"></div>
+        <div class="timing-item">
+            <div class="time">17:00</div>
+            <div class="event">Банкет</div>
+        </div>
+        <div class="timing-line"></div>
+        <div class="timing-item">
+            <div class="time">21:30</div>
+            <div class="event">Свадебный торт</div>
+        </div>
+    </div>
+    <!-- Цветы по бокам -->
+    <img src="images/flower.png" alt="Цветок" class="flower flower-left">
+    <img src="images/flower.png" alt="Цветок" class="flower flower-right">
+</section>
     </div>
 
     <script>
