--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <p class="subtitle">Приглашение на свадьбу</p>
     
     <h1 class="names">
-        Стефан
-        <span>"</span>
+        Артем
+        <span> и </span>
         Анна
     </h1>
     
