--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <section class="section location-info">
             <h4 class="place-title">Место проведения</h4>
             <h2 class="place-name">Резиденция Маслово</h2>
-            <img src="images/location.jpg" alt="Резиденция" class="location-img">
+            <img src="images/location.png" alt="Резиденция" class="location-img">
             <p class="place-address">
                 Московская область, Одинцовский ГО,<br> территориальное управление Успенское
             </p>
