--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <div>Анна</div>
     </div>
 
-    <!-- ОБЕРТКА ДЛЯ ЦЕНТРИРОВАНИЯ -->
-    <div class="invite-button">
-        <button class="invite-button" onclick="openInvite()">Открыть приглашение</button>
-    </div>
+   <!-- ОБЕРТКА -->
+<div class="invite-wrapper">
+    <button class="invite-button" onclick="openInvite()">Открыть приглашение</button>
+</div>
            <div class="flowers-bottom">
     <div class="flower"></div>
     <div class="flower"></div>
