--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
     </div>
     <!-- Цветы по бокам -->
-    <img src="images/flower.png" alt="Цветок" class="flower flower-left">
+    <img src="images/flower.png" class="flower flower-left">
     <img src="images/flower.png" alt="Цветок" class="flower flower-right">
 </section>
     </div>
