--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </div>
     <!-- Цветы по бокам -->
     <img src="images/flower.png" class="flower flower-left">
-    <img src="images/flower.png" alt="Цветок" class="flower flower-right">
+    <img src="images/flower.png" class="flower flower-right">
 </section>
     </div>
 
