--- a/index.html
+++ b/index.html
@@ -95,7 +95,40 @@
     <img src="images/flower.png" class="flower flower-right">
 </section>
     </div>
+ <!-- 5-й БЛОК -->
+<section class="section dress-code">
+    <h2 class="dress-title">
+        <span class="dress-script">Dress</span> <span class="dress-bold">CODE</span>
+    </h2>
+    <p class="dress-text">
+        Нам будет особенно приятно видеть вас<br>
+        в нарядах цветовой гаммы нашей свадьбы
+    </p>
+    <div class="palette">
+        <!-- Первая линия цветов -->
+        <div class="color" style="background-color: #D59D9B;"></div>
+        <div class="color" style="background-color: #F27D5E;"></div>
+        <div class="color" style="background-color: #C73558;"></div>
+        <div class="color" style="background-color: #D0519A;"></div>
+        <div class="color" style="background-color: #E3A657;"></div>
+        <div class="color" style="background-color: #E5A060;"></div>
+        <div class="color" style="background-color: #A5C06F;"></div>
+        <div class="color" style="background-color: #8FA99B;"></div>
+    </div>
+    <div class="palette">
+        <!-- Вторая линия цветов -->
+        <div class="color" style="background-color: #BB2C3B;"></div>
+        <div class="color" style="background-color: #B54028;"></div>
+        <div class="color" style="background-color: #E7B1C4;"></div>
+        <div class="color" style="background-color: #E2493C;"></div>
+        <div class="color" style="background-color: #E7D9B6;"></div>
+        <div class="color" style="background-color: #9D9F4B;"></div>
+        <div class="color" style="background-color: #6F8B6A;"></div>
+    </div>
+</section>
 
+
+    
     <script>
         function openInvite() {
             document.querySelector('.page-1').classList.remove('active');
