--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
         </div>
     </div>
     <!-- Цветы по бокам -->
-    <img src="images/flower.png" class="flower flower-left">
-    <img src="images/flower.png" class="flower flower-right">
+    <img src="images/flowers.png" class="flower flower-left">
+    <img src="images/flowers.png" class="flower flower-right">
 </section>
     </div>
  <!-- 5-й БЛОК -->
