--- a/index.html
+++ b/index.html
@@ -33,12 +33,7 @@
     <div class="flower"></div>
     <div class="flower"></div>
     <div class="flower"></div>
-    <div class="flower"></div>
-    <div class="flower"></div>
-    <div class="flower"></div>
-    <div class="flower"></div>
-    <div class="flower"></div>
-</div>
+   </div>
 </div>
     <!-- Основной контент (вторая и третья секции) -->
     <div class="main-content">
@@ -91,8 +86,8 @@
         </div>
     </div>
     <!-- Цветы по бокам -->
-    <img src="images/flowers.png" class="flower flower-left">
-    <img src="images/flowers.png" class="flower flower-right">
+    <img src="images/flowers.png" class="flowers flower-left">
+    <img src="images/flowers.png" class="flowers flower-right">
 </section>
     </div>
  <!-- 5-й БЛОК -->
