--- a/index.html
+++ b/index.html
@@ -121,8 +121,28 @@
         <div class="color" style="background-color: #6F8B6A;"></div>
     </div>
 </section>
+ <!-- 6-й БЛОК -->
+<section class="section outfits">
+    <h2 class="outfits-title">ДЕВУШКИ</h2>
+    <p class="outfits-text">
+        Платья-макси или мини, с кружевом<br>
+        или, например, пайетками, костюмы<br>
+        и комбинезоны
+    </p>
 
-
+    <!-- Слайдер с фото -->
+    <div class="slider">
+        <div class="slides">
+            <img src="images/dress1.jpg" alt="Наряд 1">
+            <img src="images/dress2.jpg" alt="Наряд 2">
+            <img src="images/dress3.jpg" alt="Наряд 3">
+            <img src="images/dress4.jpg" alt="Наряд 4">
+        </div>
+        <!-- Стрелки -->
+        <button class="prev" onclick="prevSlide()">‹</button>
+        <button class="next" onclick="nextSlide()">›</button>
+    </div>
+</section>
     
     <script>
         function openInvite() {
