--- a/index.html
+++ b/index.html
@@ -143,7 +143,27 @@
         <button class="next" onclick="nextSlide()">›</button>
     </div>
 </section>
-    
+     <!-- 7-й БЛОК -->
+<section class="section outfits">
+    <h2 class="outfits-title">МУЖЧИНЫ</h2>
+    <p class="outfits-text">
+        Смокинги нетрадиционных цветов <br>
+        и фасонов и акцентные аксессуары
+    </p>
+
+    <!-- Слайдер с фото -->
+    <div class="slider">
+        <div class="slides">
+            <img src="images/man1.jpg" alt="Наряд 1">
+            <img src="images/man2.jpg" alt="Наряд 2">
+            <img src="images/man3.jpg" alt="Наряд 3">
+            <img src="images/man4.jpg" alt="Наряд 4">
+        </div>
+        <!-- Стрелки -->
+        <button class="prev" onclick="prevSlide()">‹</button>
+        <button class="next" onclick="nextSlide()">›</button>
+    </div>
+</section>
     <script>
         function openInvite() {
             document.querySelector('.page-1').classList.remove('active');
