--- a/index.html
+++ b/index.html
@@ -130,19 +130,19 @@
         и комбинезоны
     </p>
 
-    <!-- Слайдер с фото -->
+    <!-- Слайдер -->
     <div class="slider">
         <div class="slides">
             <img src="images/dress1.jpg" alt="Наряд 1">
             <img src="images/dress2.jpg" alt="Наряд 2">
             <img src="images/dress3.jpg" alt="Наряд 3">
-            <img src="images/dress4.jpg" alt="Наряд 4">
+             <img src="images/dress4.jpg" alt="Наряд 4">
         </div>
-        <!-- Стрелки -->
         <button class="prev" onclick="prevSlide()">‹</button>
         <button class="next" onclick="nextSlide()">›</button>
     </div>
 </section>
+
      <!-- 7-й БЛОК -->
 <section class="section outfits">
     <h2 class="outfits-title">МУЖЧИНЫ</h2>
