--- a/index.html
+++ b/index.html
@@ -163,6 +163,17 @@
         <button class="next" onclick="nextSlide()">›</button>
     </div>
 </section>
+     <!-- 8-й БЛОК -->
+
+<section class="section wishes">
+    <h2 class="wishes-title">ПОЖЕЛАНИЯ</h2>
+    <p class="wishes-text">
+        Мы очень ценим вашу заботу, внимание и<br>
+        будем рады любому подарку! И не важно,<br>
+        в какой конверт вы его упакуете :)
+    </p>
+</section>
+    
     <script>
         function openInvite() {
             document.querySelector('.page-1').classList.remove('active');
