--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <!-- Третья секция -->
         <section class="section location-info">
             <h4 class="place-title">Место проведения</h4>
-            <h2 class="place-name">Резиденция Маслово</h2>
+            <h2 class="place-name">Усадьба Середникова</h2>
             <img src="images/location.png" alt="Резиденция" class="location-img">
             <p class="place-address">
                 Московская область, Одинцовский ГО,<br> территориальное управление Успенское
