--- a/index.html
+++ b/index.html
@@ -174,6 +174,32 @@
     </p>
 </section>
     
+     <!-- 9-й БЛОК -->
+
+    <section class="section contacts">
+    <h2 class="contacts-title">КОНТАКТЫ</h2>
+    <p class="contacts-text">
+        Если в день свадьбы у вас возникнут вопросы, просьба обращаться<br>
+        к нашему свадебному организатору
+    </p>
+    <div class="organizer">АЛЕДЖИА</div>
+    <button class="contact-button" onclick="window.location.href='tel:+123456789'">
+        СВЯЗАТЬСЯ
+    </button>
+
+    <div class="countdown-section">
+        <h3 class="countdown-title">Увидимся через</h3>
+        <div class="countdown">
+            <div><span id="days">0</span><br>ДНЕЙ</div>
+            <div><span id="hours">0</span><br>ЧАСОВ</div>
+            <div><span id="minutes">0</span><br>МИНУТ</div>
+            <div><span id="seconds">0</span><br>СЕКУНД</div>
+        </div>
+        <img src="images/flowers.png" alt="Цветы" class="flowers-bottom-img">
+    </div>
+</section>
+
+
     <script>
         function openInvite() {
             document.querySelector('.page-1').classList.remove('active');
