--- a/index.html
+++ b/index.html
@@ -195,7 +195,18 @@
             <div><span id="minutes">0</span><br>МИНУТ</div>
             <div><span id="seconds">0</span><br>СЕКУНД</div>
         </div>
-        <img src="images/flowers.png" alt="Цветы" class="flowers-bottom-img">
+<div class="flowers-bottom">
+    <div class="flower"></div>
+    <div class="flower"></div>
+    <div class="flower"></div>
+    <div class="flower"></div>
+    <div class="flower"></div>
+    <div class="flower"></div>
+    <div class="flower"></div>
+    <div class="flower"></div>
+    <div class="flower"></div>
+    <div class="flower"></div>
+   </div>
     </div>
 </section>
 
