--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         Если в день свадьбы у вас возникнут вопросы, просьба обращаться<br>
         к нашему свадебному организатору
     </p>
-    <div class="organizer">АЛЕДЖИА</div>
+    <div class="organizer">НАДЕЖДА</div>
     <button class="contact-button" onclick="window.location.href='tel:+123456789'">
         СВЯЗАТЬСЯ
     </button>
