--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Приглашение на Свадьбу</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
@@ -38,6 +38,7 @@
     <!-- Основной контент (вторая и третья секции) -->
     <div class="main-content">
         <!-- Вторая секция -->
+        <section class="section outfits scroll-reveal">
         <section class="section invite-details">
             <h2 class="heading">ДОРОГИЕ ГОСТИ!</h2>
             <p class="text">
@@ -48,8 +49,9 @@
             <p class="text">Мы будем рады видеть вас<br> в кругу наших гостей!</p>
             <p class="signature">Артем и Анна</p>
         </section>
-
+</section>
         <!-- Третья секция -->
+        <section class="section outfits scroll-reveal">
         <section class="section location-info">
             <h4 class="place-title">Место проведения</h4>
             <h2 class="place-name">Усадьба Середникова</h2>
@@ -62,6 +64,7 @@
             <p class="password">АС</p>
         </section>
         <!-- Четвёртая секция — Тайминг -->
+            <section class="section outfits scroll-reveal">
 <section class="section timing">
     <h2 class="timing-title">ТАЙМИНГ</h2>
     <div class="timing-container">
@@ -89,8 +92,10 @@
     <img src="images/flowers.png" class="flowers flower-left">
     <img src="images/flowers.png" class="flowers flower-right">
 </section>
+</section>
     </div>
  <!-- 5-й БЛОК -->
+<section class="section outfits scroll-reveal">
 <section class="section dress-code">
     <h2 class="dress-title">
         <span class="dress-script">Dress</span> <span class="dress-bold">CODE</span>
@@ -121,7 +126,9 @@
         <div class="color" style="background-color: #6F8B6A;"></div>
     </div>
 </section>
+</section>
  <!-- 6-й БЛОК -->
+<section class="section outfits scroll-reveal">
 <section class="section outfits">
     <h2 class="outfits-title">ДЕВУШКИ</h2>
     <p class="outfits-text">
@@ -142,8 +149,9 @@
         <button class="next" onclick="nextSlide()">›</button>
     </div>
 </section>
-
+</section>
      <!-- 7-й БЛОК -->
+<section class="section outfits scroll-reveal">
 <section class="section outfits">
     <h2 class="outfits-title">МУЖЧИНЫ</h2>
     <p class="outfits-text">
@@ -163,6 +171,7 @@
         <button class="next" onclick="nextSlide()">›</button>
     </div>
 </section>
+</section>
      <!-- 8-й БЛОК -->
 
 <section class="section wishes">
@@ -173,9 +182,10 @@
         в какой конверт вы его упакуете :)
     </p>
 </section>
+</section>
     
      <!-- 9-й БЛОК -->
-
+<section class="section outfits scroll-reveal">
     <section class="section contacts">
     <h2 class="contacts-title">КОНТАКТЫ</h2>
     <p class="contacts-text">
@@ -209,7 +219,7 @@
    </div>
     </div>
 </section>
-
+</section>
 
     <script>
         function openInvite() {
