--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -9,13 +10,14 @@
 </head>
 <body>
     <!-- Первый экран -->
-    <div class="page-1 scroll-reveal">
+    <div class="page-1">
         <p class="subtitle">ПРИГЛАШЕНИЕ НА СВАДЬБУ</p>
         <div class="names">
             <div>Артем</div>
             <span>и</span>
             <div>Анна</div>
         </div>
+        <!--основное-->
         <div class="invite-wrapper">
             <button class="invite-button" onclick="openInvite()">Открыть приглашение</button>
         </div>
@@ -42,7 +44,7 @@
             <p class="text">Мы будем рады видеть вас<br> в кругу наших гостей!</p>
             <p class="signature">Артем и Анна</p>
         </section>
-
+  <!-- 3 блок -->
         <section class="section location-info scroll-reveal">
             <h4 class="place-title">Место проведения</h4>
             <h2 class="place-name">Усадьба Середникова</h2>
