--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         const slides = document.querySelector(`.slides-${group}`);
         const total = slides.children.length;
         const offset = -indices[group] * 100;
-        slides.style.transform = translateX(${offset}%);
+        slides.style.transform = `translateX(${offset}%)`;
     }
 
     function prevSlide(group) {
