--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
             <p class="dress-text">Нам будет особенно приятно видеть вас<br> в нарядах цветовой гаммы нашей свадьбы</p>
             <div class="palette">
                 <div class="color" style="background-color:#D59D9B;"></div>
-                <div class="color" style="background-color:#F27D5E;"></div>
-                <div class="color" style="background-color:#C73558;"></div>
-                <div class="color" style="background-color:#D0519A;"></div>
+                <div class="color" style="background-color:#ffe4e9;"></div>
+                <div class="color" style="background-color:#cfeef5;"></div>
+                <div class="color" style="background-color:#ff9db;"></div>
                 <div class="color" style="background-color:#E3A657;"></div>
                 <div class="color" style="background-color:#E5A060;"></div>
                 <div class="color" style="background-color:#A5C06F;"></div>
@@ -158,7 +158,7 @@
                 entry.target.classList.add('visible');
             }
         });
-    }, { threshold: 0.7 });
+    }, { threshold: 0.5 });
 
     document.querySelectorAll('.scroll-reveal').forEach(section => observer.observe(section));
 
