--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="color" style="background-color:#cfeef5;"></div>
                 <div class="color" style="background-color:#ff9db;"></div>
                 <div class="color" style="background-color:#E3A657;"></div>
-                <div class="color" style="background-color:#E5A060;"></div>
+                <div class="color" style="background-color:#fdf6e3;"></div>
                 <div class="color" style="background-color:#A5C06F;"></div>
                 <div class="color" style="background-color:#8FA99B;"></div>
             </div>
