--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <section class="section invite-details scroll-reveal">
             <h2 class="heading">ДОРОГИЕ ГОСТИ!</h2>
             <p class="text">Приглашаем вас отпраздновать важное событие<br> в нашей жизни – день свадьбы!</p>
-            <h3 class="date">1 ИЮНЯ 2025</h3>
+            <h3 class="date">1 АВГУСТА 2025</h3>
             <p class="text">Мы будем рады видеть вас<br> в кругу наших гостей!</p>
             <p class="signature">Артем и Анна</p>
         </section>
