--- a/index.html
+++ b/index.html
@@ -224,5 +224,7 @@ setInterval(()=>{
   document.getElementById('seconds').innerText = Math.floor((d/1000)%60);
 },1000);
 </script>
+    <!-- АУДИО (держи внизу body, путь поменяй на свой файл) -->
+<audio id="weddingMusic" src="audio/wedding.mp3"></audio>
 </body>
 </html>
